# catiy-ml

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yaml  justfile  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
app/: main.py
app/api/: health.py
app/api/schema/: model.py
app/api/v1/: clip.py  effnet.py  task.py  yolo.py
app/config/: setting.py
app/constants/: error_code.py  external.py  task_status.py
app/domain/clip/services/: classify_activity_label.py
app/domain/clip/usecase/: classify_photo.py
app/domain/effnet/data/: labels.py
app/domain/effnet/tasks/: classify_cat.py
app/domain/effnet/usecase/: classify_cat.py  classify_cat_and_update_task.py  predict.py
app/domain/yolo/tasks/: detect_cat.py  trim_cat.py
app/domain/yolo/usecase/: detect_cat_and_update_from_img.py  predict.py  scan.py  trim_cat_and_update_from_results.py  verify_image.py
app/ents/: __init__.py  schema.py
app/exceptions/: __init__.py  app.py
app/factory/: app.py  task.py
app/infra/: logger.py
app/infra/db/: engine.py
app/infra/depends/: base.py  db.py  ml.py  r2.py
app/infra/exception_handlers/: __init__.py  app.py  validation.py
app/infra/lifespan/: ml.py
app/infra/middlewares/: __init__.py  request_id.py  request_logger.py
app/infra/r2/: client.py
app/infra/repository/: cat.py  task.py
app/types/: app.py  image.py  state.py
app/utils/: image.py
e2e/: test_app.py
src/: main.py
tests/infra/depends/: test_ml.py
tests/infra/repository/: test_cat.py  test_task.py
tests/utils/: test_image.py
(+6 files in other folders)
