[project]
name = "catiy-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.42.95",
    "botocore>=1.42.95",
    "fastapi[standard]>=0.135.2",
    "loguru>=0.7.3",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.12.0",
    "ultralytics>=8.4.33",
]

[dependency-groups]
dev = [
    "boto3-stubs[s3]>=1.42.95",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "ty>=0.0.29",
]
